adjusted css to prevent logo clipping in Chrome

--- a/app/styles/common/_header.scss
+++ b/app/styles/common/_header.scss
@@ -22,9 +22,9 @@
 }
 
 .nxg-logo {
-  background: url(../img/nxg_logo_blue.svg), url(../img/nxg_logo_blue.png);
+  background: url(../img/nxg_logo_blue.svg), url(../img/nxg_logo_blue_unsupported.png);
   background-repeat: no-repeat;
-  background-size: 200px auto;
+  background-size: 200px 65px;
   background-position: 20px 0;
   height: 70px;
   position: relative;
